# snake_dynamixel

./: CMakeLists.txt  README.md  package.xml  trajectory_client.py
config/: dynamixel_joint_controller.yaml  tilt.yaml
launch/: controller_manager.launch  start_meta_controller.launch  start_tilt_controller.launch
